--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
      <title>Document</title>
 </head>
 <body>
-<<<<<<< Updated upstream
     HTML 문서의 내용입니다
      A 개발자가 수정한 내용
-=======
     HTML 문서의 내용입니다.
     A개발자가 수정한 내용.
->>>>>>> Stashed changes
+    C개발자가 수정한 내용
 </body>
 </html>
 
